src/objects/Int_Agreement_Non_IFRS__c.object
<CustomObject>
    <description>Int Agreement Non IFRS</description>
    <fields>
        <fullName>Accounting_Type_Code__c</fullName>
        <description>Accounting Type Code</description>
        <label>Accounting Type Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrued_Interest_Amount__c</fullName>
        <description>Accrued Interest Amount</description>
        <label>Accrued Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Non IFRS</relationshipLabel>
        <relationshipName>Int_Agreements_Non_IFRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrears_Amount__c</fullName>
        <description>Arrears Amount</description>
        <label>Arrears Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FED_Flag_Only_Code__c</fullName>
        <description>FED Flag Only Code</description>
        <label>FED Flag Only Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FED_GL_Code_Block__c</fullName>
        <description>FED GL Code Block</description>
        <label>FED GL Code Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Principal_Balance_Amount__c</fullName>
        <description>Net Principal Balance Amount</description>
        <label>Net Principal Balance Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Int Agreement Non IFRS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANI-{0000000000}</displayFormat>
        <label>Agreement Non IFRS Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Non IFRS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>